--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 ## add a web-var.env file with values for the following:
 FLASK_APP=iot
 FLASK_ENV=development
-DATABASE_URL=postgresql://postgres@db/ft
+DATABASE_URL=postgres://db:5432
 SECRET_KEY=secret_key
 TWILIO_ACCOUNT_ID=secret_key
 TWILIO_SECRET_KEY=secret_key
